--- a/.github/worflows/main.yml
+++ b/.github/worflows/main.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
 
     steps:
     - name: Checkout code
@@ -19,7 +19,10 @@ jobs:
         node-version: 14
 
     - name: Install dependencies
-      run: npm ci
+      run: npm install
+
+    - name: Run eslint
+      run: npm run lint
 
     - name: Run tests
       run: npm test
