--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,21 +8,26 @@ on:
 jobs:
   build:
     runs-on: ubuntu-18.04
-
+    container:
+      image: composer:latest
+        - ${{ github.worspace }}://app
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: 14
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 14
 
-    - name: Install dependencies
-      run: npm install
+      - name: Install dependencies
+        run: npm install
 
-    - name: Run eslint
-      run: npm run lint
+      - name: Running composer install
+        run: composer install
 
-    - name: Run tests
-      run: npm test
+      - name: Run eslint
+        run: npm run lint
+
+      - name: Run tests
+        run: npm test
