--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,10 +7,11 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     container:
       image: composer:latest
-        - ${{ github.worspace }}://app
+        - ${{ github.worspace }}:/app
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
