--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,8 +11,10 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
-
+        uses: actions/checkout@v3
+      - name: Docker compose
+        uses: isbang/compose-action@v1.4.1
+        
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
