--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,14 +32,14 @@ jobs:
 
       - name: Create external volume
         run: docker volume create --name=test-postgresql-volume
-      - name: Create external Volume  
+      - name: Create external Volume
         run: docker volume create --name=postgresql-volume
 
       - name: Start Docker Compose
         uses: isbang/compose-action@v1.4.1
         with:
           compose-file: "./docker-compose.yml"
-          up-flags: "up"
+          command: up
 
       - name: Run eslint
         run: npm run lint
