--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,6 +40,13 @@ jobs:
         with:
           compose-file: "./docker-compose.yml"
           command: up
+        env:
+          DB_NAME: "${{ secrets.DB_NAME }}"
+          DB_USERNAME: "${{ secrets.DB_USERNAME }}"
+          DB_PASSWORD: "${{ secrets.DB_PASSWORD }}"
+          DB_TEST_NAME: "${{ secrets.DB_TEST_NAME }}"
+          DB_TEST_USERNAME: "${{ secrets.DB_TEST_USERNAME }}"
+          DB_TEST_PASSWORD: "${{ secrets.DB_TEST_PASSWORD }}"
 
       - name: Run eslint
         run: npm run lint
