--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.1.4",
     "@nestjs/typeorm": "^9.0.1",
+    "axios": "^1.3.2",
     "nest-winston": "^1.8.0",
     "nestjs-typeorm-paginate": "^4.0.3",
     "pg": "^8.9.0",
