--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/swagger": "^6.1.4",
     "@nestjs/typeorm": "^9.0.1",
     "axios": "^1.3.2",
+    "cache-manager": "^5.1.5",
     "nest-winston": "^1.8.0",
     "nestjs-typeorm-paginate": "^4.0.3",
     "pg": "^8.9.0",
