--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "pm2 start ecosystem.config.js",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "npm run build && pm2 start ./dist/main.js --name=void -i max",
+    "start:prod": "npm run build && pm2 start ./dist/main.js --watch --name=void -i max",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest --detectOpenHandles",
     "test:watch": "jest --watch",
